impl/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term
   4          | UCID TyBinder
   5          | LCID Binder

   6  Kind : KNDU
   7       | KNDA

   8  Binder : COLON Type
   9         | EQ Term

  10  Type : ArrowType
  11       | RREF AType
  12       | MMVAR AType
  13       | SSOURCE AType
  14       | SSINK AType

  15  AType : LPAREN Type RPAREN
  16        | UCID
  17        | TTOP
  18        | BOOL
  19        | TBOT
  20        | LCURLY FieldTypes RCURLY
  21        | LT FieldTypes GT
  22        | USTRING
  23        | UUNIT
  24        | UFLOAT
  25        | NAT

  26  TyBinder :
  27           | EQ Type

  28  ArrowType : AType ARROW LPAREN Kind RPAREN ArrowType
  29            | AType

  30  Term : AppTerm
  31       | LAMBDA LCID COLON Type DOT Term
  32       | LAMBDA USCORE COLON Type DOT Term
  33       | IF Term THEN Term ELSE Term
  34       | LET LCID EQ Term IN Term
  35       | LET USCORE EQ Term IN Term
  36       | LETREC LCID COLON Type EQ Term IN Term
  37       | CASE Term OF Cases
  38       | AppTerm COLONEQ AppTerm
  39       | AppTerm EQLLT AppTerm
  40       | FORK TermProduct

  41  AppTerm : PathTerm
  42          | AppTerm PathTerm
  43          | FIX PathTerm
  44          | REF PathTerm
  45          | MVAR PathTerm
  46          | BANG PathTerm
  47          | TRIANGLE PathTerm
  48          | TIMESFLOAT PathTerm PathTerm
  49          | SUCC PathTerm
  50          | PRED PathTerm
  51          | ISZERO PathTerm

  52  PathTerm : PathTerm DOT LCID
  53           | PathTerm DOT INTV
  54           | AscribeTerm

  55  FieldTypes :
  56             | NEFieldTypes

  57  NEFieldTypes : FieldType
  58               | FieldType COMMA NEFieldTypes

  59  FieldType : LCID COLON Type
  60            | Type

  61  AscribeTerm : ATerm AS Type
  62              | ATerm

  63  TermSeq : Term
  64          | Term SEMI TermSeq

  65  TermProduct : LCURLY Term COMMA Term RCURLY

  66  ATerm : LPAREN TermSeq RPAREN
  67        | INERT LSQUARE Type RSQUARE
  68        | LCID
  69        | TRUE
  70        | FALSE
  71        | TermProduct
  72        | LCURLY Fields RCURLY
  73        | LT LCID EQ Term GT AS Type
  74        | STRINGV
  75        | UNIT
  76        | FLOATV
  77        | INTV

  78  Fields :
  79         | NEFields

  80  NEFields : Field
  81           | Field COMMA NEFields

  82  Field : LCID EQ Term
  83        | Term

  84  Cases : Case
  85        | Case VBAR Cases

  86  Case : LT LCID EQ LCID GT DDARROW AppTerm

  87  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (87)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	MVAR  shift 18
	FORK  shift 19
	UCID  shift 20
	LCID  shift 21
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	BANG  shift 25
	EOF  shift 26
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	TRIANGLE  shift 30
	.  error

	toplevel  goto 31
	Command  goto 32
	Term  goto 33
	AppTerm  goto 34
	TermProduct  goto 35
	PathTerm  goto 36
	AscribeTerm  goto 37
	ATerm  goto 38


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ATerm : INERT . LSQUARE Type RSQUARE  (67)

	LSQUARE  shift 39
	.  error


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (31)
	Term : LAMBDA . USCORE COLON Type DOT Term  (32)

	LCID  shift 40
	USCORE  shift 41
	.  error


state 5
	Term : IF . Term THEN Term ELSE Term  (33)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	MVAR  shift 18
	FORK  shift 19
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	BANG  shift 25
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	TRIANGLE  shift 30
	.  error

	Term  goto 43
	AppTerm  goto 34
	TermProduct  goto 35
	PathTerm  goto 36
	AscribeTerm  goto 37
	ATerm  goto 38


state 6
	ATerm : TRUE .  (69)

	.  reduce 69


state 7
	ATerm : FALSE .  (70)

	.  reduce 70


state 8
	Term : LET . LCID EQ Term IN Term  (34)
	Term : LET . USCORE EQ Term IN Term  (35)

	LCID  shift 44
	USCORE  shift 45
	.  error


state 9
	AppTerm : FIX . PathTerm  (43)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 46
	AscribeTerm  goto 37
	ATerm  goto 38


state 10
	Term : LETREC . LCID COLON Type EQ Term IN Term  (36)

	LCID  shift 47
	.  error


state 11
	Term : CASE . Term OF Cases  (37)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	MVAR  shift 18
	FORK  shift 19
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	BANG  shift 25
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	TRIANGLE  shift 30
	.  error

	Term  goto 48
	AppTerm  goto 34
	TermProduct  goto 35
	PathTerm  goto 36
	AscribeTerm  goto 37
	ATerm  goto 38


state 12
	ATerm : UNIT .  (75)

	.  reduce 75


state 13
	AppTerm : REF . PathTerm  (44)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 49
	AscribeTerm  goto 37
	ATerm  goto 38


state 14
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (48)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 50
	AscribeTerm  goto 37
	ATerm  goto 38


state 15
	AppTerm : SUCC . PathTerm  (49)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 51
	AscribeTerm  goto 37
	ATerm  goto 38


state 16
	AppTerm : PRED . PathTerm  (50)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 52
	AscribeTerm  goto 37
	ATerm  goto 38


state 17
	AppTerm : ISZERO . PathTerm  (51)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 53
	AscribeTerm  goto 37
	ATerm  goto 38


state 18
	AppTerm : MVAR . PathTerm  (45)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 54
	AscribeTerm  goto 37
	ATerm  goto 38


state 19
	Term : FORK . TermProduct  (40)

	LCURLY  shift 55
	.  error

	TermProduct  goto 56


state 20
	Command : UCID . TyBinder  (4)
	TyBinder : .  (26)

	EQ  shift 57
	SEMI  reduce 26

	TyBinder  goto 58


state 21
	Command : LCID . Binder  (5)
	ATerm : LCID .  (68)

	COLON  shift 59
	EQ  shift 60
	INERT  reduce 68
	TRUE  reduce 68
	FALSE  reduce 68
	AS  reduce 68
	UNIT  reduce 68
	LCID  reduce 68
	INTV  reduce 68
	FLOATV  reduce 68
	STRINGV  reduce 68
	COLONEQ  reduce 68
	DOT  reduce 68
	LCURLY  reduce 68
	LPAREN  reduce 68
	LT  reduce 68
	SEMI  reduce 68
	EQLLT  reduce 68

	Binder  goto 61


state 22
	ATerm : INTV .  (77)

	.  reduce 77


state 23
	ATerm : FLOATV .  (76)

	.  reduce 76


state 24
	ATerm : STRINGV .  (74)

	.  reduce 74


state 25
	AppTerm : BANG . PathTerm  (46)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 62
	AscribeTerm  goto 37
	ATerm  goto 38


state 26
	toplevel : EOF .  (1)

	.  reduce 1


state 27
	TermProduct : LCURLY . Term COMMA Term RCURLY  (65)
	ATerm : LCURLY . Fields RCURLY  (72)
	Fields : .  (78)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	MVAR  shift 18
	FORK  shift 19
	LCID  shift 63
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	BANG  shift 25
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	TRIANGLE  shift 30
	RCURLY  reduce 78

	Term  goto 64
	AppTerm  goto 34
	TermProduct  goto 35
	PathTerm  goto 36
	AscribeTerm  goto 37
	ATerm  goto 38
	Fields  goto 65
	NEFields  goto 66
	Field  goto 67


state 28
	ATerm : LPAREN . TermSeq RPAREN  (66)

	INERT  shift 3
	LAMBDA  shift 4
	IF  shift 5
	TRUE  shift 6
	FALSE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	CASE  shift 11
	UNIT  shift 12
	REF  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	MVAR  shift 18
	FORK  shift 19
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	BANG  shift 25
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	TRIANGLE  shift 30
	.  error

	Term  goto 68
	AppTerm  goto 34
	TermProduct  goto 35
	PathTerm  goto 36
	AscribeTerm  goto 37
	ATerm  goto 38
	TermSeq  goto 69


state 29
	ATerm : LT . LCID EQ Term GT AS Type  (73)

	LCID  shift 70
	.  error


state 30
	AppTerm : TRIANGLE . PathTerm  (47)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 71
	AscribeTerm  goto 37
	ATerm  goto 38


state 31
	%entry% : '\001' toplevel .  (87)

	.  reduce 87


state 32
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 72
	.  error


state 33
	Command : Term .  (3)

	.  reduce 3


state 34
	Term : AppTerm .  (30)
	Term : AppTerm . COLONEQ AppTerm  (38)
	Term : AppTerm . EQLLT AppTerm  (39)
	AppTerm : AppTerm . PathTerm  (42)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	COLONEQ  shift 73
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	EQLLT  shift 74
	THEN  reduce 30
	ELSE  reduce 30
	IN  reduce 30
	OF  reduce 30
	COMMA  reduce 30
	GT  reduce 30
	RCURLY  reduce 30
	RPAREN  reduce 30
	SEMI  reduce 30

	TermProduct  goto 35
	PathTerm  goto 75
	AscribeTerm  goto 37
	ATerm  goto 38


state 35
	ATerm : TermProduct .  (71)

	.  reduce 71


state 36
	AppTerm : PathTerm .  (41)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 76
	INERT  reduce 41
	THEN  reduce 41
	ELSE  reduce 41
	TRUE  reduce 41
	FALSE  reduce 41
	IN  reduce 41
	OF  reduce 41
	UNIT  reduce 41
	LCID  reduce 41
	INTV  reduce 41
	FLOATV  reduce 41
	STRINGV  reduce 41
	COLONEQ  reduce 41
	COMMA  reduce 41
	GT  reduce 41
	LCURLY  reduce 41
	LPAREN  reduce 41
	LT  reduce 41
	RCURLY  reduce 41
	RPAREN  reduce 41
	SEMI  reduce 41
	VBAR  reduce 41
	EQLLT  reduce 41


state 37
	PathTerm : AscribeTerm .  (54)

	.  reduce 54


state 38
	AscribeTerm : ATerm . AS Type  (61)
	AscribeTerm : ATerm .  (62)

	AS  shift 77
	INERT  reduce 62
	THEN  reduce 62
	ELSE  reduce 62
	TRUE  reduce 62
	FALSE  reduce 62
	IN  reduce 62
	OF  reduce 62
	UNIT  reduce 62
	LCID  reduce 62
	INTV  reduce 62
	FLOATV  reduce 62
	STRINGV  reduce 62
	COLONEQ  reduce 62
	COMMA  reduce 62
	DOT  reduce 62
	GT  reduce 62
	LCURLY  reduce 62
	LPAREN  reduce 62
	LT  reduce 62
	RCURLY  reduce 62
	RPAREN  reduce 62
	SEMI  reduce 62
	VBAR  reduce 62
	EQLLT  reduce 62


state 39
	ATerm : INERT LSQUARE . Type RSQUARE  (67)

	TTOP  shift 78
	BOOL  shift 79
	TBOT  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	UFLOAT  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	NAT  shift 87
	MMVAR  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 93
	ArrowType  goto 94
	AType  goto 95


state 40
	Term : LAMBDA LCID . COLON Type DOT Term  (31)

	COLON  shift 96
	.  error


state 41
	Term : LAMBDA USCORE . COLON Type DOT Term  (32)

	COLON  shift 97
	.  error


state 42
	ATerm : LCID .  (68)

	.  reduce 68


state 43
	Term : IF Term . THEN Term ELSE Term  (33)

	THEN  shift 98
	.  error


state 44
	Term : LET LCID . EQ Term IN Term  (34)

	EQ  shift 99
	.  error


state 45
	Term : LET USCORE . EQ Term IN Term  (35)

	EQ  shift 100
	.  error


state 46
	AppTerm : FIX PathTerm .  (43)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 76
	INERT  reduce 43
	THEN  reduce 43
	ELSE  reduce 43
	TRUE  reduce 43
	FALSE  reduce 43
	IN  reduce 43
	OF  reduce 43
	UNIT  reduce 43
	LCID  reduce 43
	INTV  reduce 43
	FLOATV  reduce 43
	STRINGV  reduce 43
	COLONEQ  reduce 43
	COMMA  reduce 43
	GT  reduce 43
	LCURLY  reduce 43
	LPAREN  reduce 43
	LT  reduce 43
	RCURLY  reduce 43
	RPAREN  reduce 43
	SEMI  reduce 43
	VBAR  reduce 43
	EQLLT  reduce 43


state 47
	Term : LETREC LCID . COLON Type EQ Term IN Term  (36)

	COLON  shift 101
	.  error


state 48
	Term : CASE Term . OF Cases  (37)

	OF  shift 102
	.  error


state 49
	AppTerm : REF PathTerm .  (44)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 76
	INERT  reduce 44
	THEN  reduce 44
	ELSE  reduce 44
	TRUE  reduce 44
	FALSE  reduce 44
	IN  reduce 44
	OF  reduce 44
	UNIT  reduce 44
	LCID  reduce 44
	INTV  reduce 44
	FLOATV  reduce 44
	STRINGV  reduce 44
	COLONEQ  reduce 44
	COMMA  reduce 44
	GT  reduce 44
	LCURLY  reduce 44
	LPAREN  reduce 44
	LT  reduce 44
	RCURLY  reduce 44
	RPAREN  reduce 44
	SEMI  reduce 44
	VBAR  reduce 44
	EQLLT  reduce 44


state 50
	AppTerm : TIMESFLOAT PathTerm . PathTerm  (48)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	INERT  shift 3
	TRUE  shift 6
	FALSE  shift 7
	UNIT  shift 12
	LCID  shift 42
	INTV  shift 22
	FLOATV  shift 23
	STRINGV  shift 24
	DOT  shift 76
	LCURLY  shift 27
	LPAREN  shift 28
	LT  shift 29
	.  error

	TermProduct  goto 35
	PathTerm  goto 103
	AscribeTerm  goto 37
	ATerm  goto 38

